[Temporary fix] fontspect IfExistsTF does not exist in 2.5a of Texlive 2016

--- a/girsa.sty
+++ b/girsa.sty
@@ -53,9 +53,9 @@
 
 
 %% FONTS
-\IfFontExistsTF{Ringbearer}{\newfontfamily\sectionfont{Ringbearer}}{\newfontfamily\sectionfont{Latin Modern Sans}}
+%\newfontfamily\sectionfont{Ringbearer}
 \newfontfamily\sansfont{Latin Modern Sans}
-\IfFontExistsTF{Aniron}{\setmainfont{Aniron}}{\setmainfont{Latin Modern Sans}}
+%\setmainfont{Aniron}
 
 
 \setlength{\fboxsep}{1pt}
