--- a/girsa.sty
+++ b/girsa.sty
@@ -54,8 +54,10 @@
 
 %% FONTS
 %\newfontfamily\sectionfont{Ringbearer}
+\newfontfamily\sectionfont{Latin Modern Sans}
 \newfontfamily\sansfont{Latin Modern Sans}
 %\setmainfont{Aniron}
+\setmainfont{Latin Modern Sans}
 
 
 \setlength{\fboxsep}{1pt}
