[STY] Error message

--- a/girsa.sty
+++ b/girsa.sty
@@ -49,6 +49,7 @@
 	\backgroundsetup{placement=center,scale=1.1,angle=0,contents={\includegraphics{background.pdf}}}%
 }
 \else
+	\typeout{background.pdf not found!}
 \fi
 
 %% COLORS
